--- a/src/main/resources/data/gui/pages-menu/NewGame.fxml
+++ b/src/main/resources/data/gui/pages-menu/NewGame.fxml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.text.*?>
 <?import javafx.scene.control.*?>
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
@@ -9,7 +7,7 @@
 
 <AnchorPane styleClass="pane" stylesheets="@NewGame.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="nl.joshuaslik.UFMReckoning.gui.NewGameController">
    <children>
-      <TableView fx:id="teamtable" opacity="0.63" prefHeight="396.0" prefWidth="562.0" AnchorPane.bottomAnchor="45.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <TableView fx:id="teamtable" layoutX="157.0" opacity="0.75" AnchorPane.bottomAnchor="60.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0">
         <columns>
           <TableColumn fx:id="teamColumn" text="Team" />
           <TableColumn fx:id="coachColumn" text="Coach" />
@@ -23,10 +21,9 @@
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
          </columnResizePolicy>
       </TableView>
-      <HBox AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0">
+      <HBox layoutX="1563.0" layoutY="908.0" prefHeight="51.0" prefWidth="236.0" AnchorPane.bottomAnchor="2.0" AnchorPane.rightAnchor="2.0">
          <children>
-            <Button mnemonicParsing="false" onAction="#handleChooseTeam" text="Choose this team">
-            </Button>
+            <Button mnemonicParsing="false" onAction="#handleChooseTeam" prefHeight="51.0" prefWidth="236.0" text="Choose this team" />
          </children></HBox>
    </children>
 </AnchorPane>
