--- a/src/main/resources/data/gui/pages-game/GameBottomMenuBar.css
+++ b/src/main/resources/data/gui/pages-game/GameBottomMenuBar.css
@@ -1,11 +1,11 @@
 @import url("../fonts.css");
 
 .bottombarbutton {
-	-fx-padding: 0;
+	-fx-padding: 2;
 	-fx-margin: 0;
 	-fx-background-color: #101010;
 	-fx-text-fill: white;
-	-fx-font-size: 30;
+	-fx-font-size: 250%;
 	-fx-font-family: 'Quicksand Book';
 	-fx-opacity: 80%;
 	-fx-border-width: 1px;
@@ -17,4 +17,10 @@
 	-fx-background-color: #000000;
 	-fx-opacity: 90%;
 	-fx-cursor: hand;
+}
+
+.label {
+	-fx-font-size: 100%;
+	-fx-font-family: 'Quicksand Book';
+	-fx-padding: 2;
 }
