--- a/src/main/resources/data/gui/pages-game/Playrounds.fxml
+++ b/src/main/resources/data/gui/pages-game/Playrounds.fxml
@@ -1,21 +1,43 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.*?>
 <?import java.lang.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="731.0" prefWidth="1298.0" styleClass="pane" stylesheets="@Competition.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="nl.joshuaslik.UFMReckoning.gui.game.Playrounds">
+<AnchorPane prefHeight="398.0" prefWidth="505.0" styleClass="pane" stylesheets="@Competition.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="nl.joshuaslik.UFMReckoning.gui.game.Playrounds">
    <children>
-      <TableView fx:id="competitiontable" layoutX="557.0" layoutY="115.0" prefHeight="584.0" prefWidth="644.0">
-        <columns>
-          <TableColumn fx:id="playround" prefWidth="75.0" text="Playround" />
-          <TableColumn fx:id="home" prefWidth="103.0" text="Home" />
-            <TableColumn fx:id="away" prefWidth="75.0" text="Away" />
-            <TableColumn fx:id="homegoals" prefWidth="75.0" text="HomeGoals" />
-            <TableColumn fx:id="awaygoals" prefWidth="75.0" text="AwayGoals" />
-        </columns>
-      </TableView>
-      <Button layoutX="103.0" layoutY="248.0" mnemonicParsing="false" onAction="#handlenNextround" text="PlayNextRound" />
+      <GridPane layoutX="59.0" layoutY="60.0" prefHeight="601.0" prefWidth="505.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="1.7976931348623157E308" minWidth="10.0" prefWidth="275.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="163.0" minWidth="10.0" prefWidth="21.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="1.7976931348623157E308" minWidth="10.0" prefWidth="209.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints maxHeight="314.0" minHeight="10.0" prefHeight="58.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="1.7976931348623157E308" minHeight="10.0" prefHeight="359.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="527.0" minHeight="10.0" prefHeight="16.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+            <TableView fx:id="competitiontable" GridPane.columnIndex="2" GridPane.rowIndex="1">
+              <columns>
+                <TableColumn fx:id="playround" prefWidth="75.0" text="Playround" />
+                <TableColumn fx:id="home" prefWidth="103.0" text="Home" />
+                  <TableColumn fx:id="away" prefWidth="75.0" text="Away" />
+                  <TableColumn fx:id="homegoals" prefWidth="75.0" text="HomeGoals" />
+                  <TableColumn fx:id="awaygoals" prefWidth="75.0" text="AwayGoals" />
+              </columns>
+               <GridPane.margin>
+                  <Insets right="25.0" />
+               </GridPane.margin>
+            </TableView>
+            <Button mnemonicParsing="false" onAction="#handlenNextround" text="PlayNextRound" GridPane.rowIndex="1">
+               <GridPane.margin>
+                  <Insets left="10.0" />
+               </GridPane.margin>
+            </Button>
+         </children>
+      </GridPane>
    </children>
 </AnchorPane>
