--- a/src/main/resources/data/gui/pages-menu/TopMenu.fxml
+++ b/src/main/resources/data/gui/pages-menu/TopMenu.fxml
@@ -10,7 +10,7 @@
    <children>
       <HBox alignment="CENTER_LEFT" layoutX="-16.0" layoutY="77.0" spacing="15.0" stylesheets="@Topmenu.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <Button mnemonicParsing="false" onAction="#handleReturnMainMenu" prefHeight="50.0" prefWidth="116.0" text="Return" />
+            <Button mnemonicParsing="false" onAction="#handleReturnMainMenu" prefHeight="50.0" prefWidth="116.0" text="Quit" />
             <Label fx:id="title" alignment="CENTER" contentDisplay="CENTER" styleClass="tile" text="Title" textAlignment="CENTER">
                <font>
                   <Font size="34.0" />
