--- a/src/main/resources/data/gui/pages-game/Market.fxml
+++ b/src/main/resources/data/gui/pages-game/Market.fxml
@@ -9,9 +9,9 @@
    <children>
       <VBox layoutX="79.0" layoutY="-6.0" AnchorPane.leftAnchor="60.0" AnchorPane.topAnchor="200.0">
          <children>
-            <Button id="btn_Games" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#handlePlayrounds" styleClass="btn_Games" text="Playrounds" />
-            <Button id="btn_Ranking" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#handleRanking" styleClass="btn_Ranking" text="Ranking" />
-            <Button id="btn_Games" layoutX="10.0" layoutY="10.0" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#handleOtherTeams" styleClass="btn_Games" text="Show other teams" />
+            <Button id="btn_Games" maxWidth="1.7976931348623157E308" mnemonicParsing="false"  text="Avaliable Players" />
+            <Button id="btn_Ranking" maxWidth="1.7976931348623157E308" mnemonicParsing="false"   text="Not avaliable Players" />
+            <Button id="btn_Games"  maxWidth="1.7976931348623157E308" mnemonicParsing="false"   text="Bids" />
          </children>
       </VBox>
    </children>
