--- a/src/main/resources/data/gui/pages-game/TeamBuilder.fxml
+++ b/src/main/resources/data/gui/pages-game/TeamBuilder.fxml
@@ -18,5 +18,6 @@
       </TableView>
       <ImageView fx:id="playerimg" fitHeight="160.0" fitWidth="160.0" layoutX="1335.0" layoutY="238.0" pickOnBounds="true" preserveRatio="true" AnchorPane.rightAnchor="300.0" AnchorPane.topAnchor="200.0" />
       <ImageView fx:id="teamimg" fitHeight="150.0" fitWidth="150.0" layoutX="21.0" layoutY="30.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="20.0" AnchorPane.topAnchor="10.0" />
+      <Button layoutY="267.0" mnemonicParsing="false" text="Change Formation" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="267.0" />
    </children>
 </AnchorPane>
